--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+
     <title>Consulting The Consultants</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -97,23 +100,112 @@
     <div class="area-of-expertise">
         <h2>Our Area Of Expertise</h2>
         <p>
-            <!-- I'm truncating for brevity, but insert the Lorem Ipsum here -->
-            Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod...
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum. Ipsum a arcu cursus vitae congue mauris. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Neque volutpat ac tincidunt vitae semper quis. 
         </p>
-    </div>
-    
-    <!-- Statistics -->
-    <div class="statistics">
-        <div class="stat">
-            <span class="number">659+</span>
-            <span class="label">Projects Completed</span>
+
+        <br>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum. Ipsum a arcu cursus vitae congue mauris. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Neque volutpat ac tincidunt vitae semper quis. 
+        </p>
+
+        <br>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum. Ipsum a arcu cursus vitae congue mauris. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Neque volutpat ac tincidunt vitae semper quis. 
+        </p>
+
+        <!-- Statistics -->
+        <div class="statistics">
+            <div class="stat">
+                <span class="number">659+</span>
+                <span class="label">Projects Completed</span>
+            </div>
+            <div class="stat">
+                <span class="number">659+</span>
+                <span class="label">Hippy Clint</span>
+            </div>
         </div>
-        <div class="stat">
-            <span class="number">659+</span>
-            <span class="label">Hippy Clint</span>
-        </div>
     </div>
+
 </div>
+
+
+<section class="projects-section">
+    <h1>Take a Look My Recent Projects</h1>
+    <p>The a Go, We Normal Ages, Parents Feedback From The Briefs The Distant Applications Harmonics,</p>
+    <div class="project-cards">
+        <!-- Landscaping Card -->
+        <div class="project-card">
+            <div class="text-content">
+                <h2>Landscaping</h2>
+                <p>The Briefs The Distant Application Abscess To Office Which Exerted In Man Dresses Question</p>
+                <a href="#">Learn More</a>
+            </div>
+            <img src="1-1-1.png" alt="Landscaping Image">
+        </div>
+        <!-- Firearms Card -->
+        <div class="project-card">
+            <div class="text-content">
+                <h2>Firearms</h2>
+                <p>The Briefs The Distant Application Abscess To Office Which Exerted In Man Dresses Question</p>
+                <a href="#">Learn More</a>
+            </div>
+            <img src="1-1-2.png" alt="Firearms Image">
+        </div>
+        <!-- Clothes Card -->
+        <div class="project-card">
+            <div class="text-content">
+                <h2>Clothes</h2>
+                <p>The Briefs The Distant Application Abscess To Office Which Exerted In Man Dresses Question</p>
+                <a href="#">Learn More</a>
+            </div>
+            <img src="1-1-3.png" alt="Clothes Image">
+        </div>
+        <!-- Cars Card -->
+        <div class="project-card">
+            <div class="text-content">
+                <h2>Cars</h2>
+                <p>The Briefs The Distant Application Abscess To Office Which Exerted In Man Dresses Question</p>
+                <a href="#">Learn More</a>
+            </div>
+            <img src="1-1-4.png" alt="Cars Image">
+        </div>
+    </div>
+</section>
+
+
+<section class="booking-section">
+    <h1>Bookings</h1>
+    <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua.</p>
+    <p>Ac Orci Phasellus Egestas Tellus Rutrum. Ipsum A Arcu Cursus Vitae Congue Mauris. Enim Blandit Voluptat Maecenas Voluptat Blandit Aliquam Etiam Erat Velit.</p>
+    <p>Neque Voluptat Ac Tincidunt Vitae Semper Quis. Venenatis Urna Cursus Eget Nunc Scelerisque Viverra Mauris In.</p>
+    <p>Nisl Nisi Scelerisque Eu Ultrices Vitae Auctor Eu Augue. Vehicula Ipsum A Arcu Cursus Vitae Congue Mauris Rhoncus. Dolor Morbi Non Arcu Risus.</p>
+    <p>Eiusmod Lacinia At Quis Risus. Enim Lobortis Scelerisque Fermentum Dui Faucibus In.</p>
+
+    <div class="calendar-section">
+        <img src="Screenshot 2023-10-25 at 5.48 1.png" alt="">
+    </div>
+</section>
+
+
+
+
+
+
+
+
+<footer class="footer">
+    <h2>Learning People To Expert Their Vision</h2>
+    <div class="social-links">
+        <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-linkedin"></i></a>
+        <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-twitter"></i></a>
+        <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-instagram"></i></a>
+
+    </div>
+</footer>
+    
 
   
 
