--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="ijmnoulkhnilnuiou.png" alt="Landscaping & Hard Scaping Icon">
             </div>
             <div class="text">
-                <h3>Landscaping & Hard Scaping</h3>
+                <h3>Clothes</h3>
             </div>
         </div>
     
@@ -89,7 +89,7 @@
                 <img src="ijmnoulkhnilnuiou.png" alt="Firearms Icon">
             </div>
             <div class="text">
-                <h3>Firearms</h3>
+                <h3>Cars</h3>
             </div>
         </div>
     
@@ -126,8 +126,8 @@
                 <span class="label"><h3>Projects Completed</h3></span>
             </div>
             <div class="stat">
-                <span class="number">659+</span>
-                <span class="label">Hippy Clint</span>
+                <span class="number"><h3>659+</h3></span>
+                <span class="label"><h3>Happy Cleints</h3></span>
             </div>
         </div>
     </div>
