added note to everything

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+     <!-- Hero Section Start -->
     <section class="hero">
         <div class="left-content">
             <h1>CONSULTING</h1>
@@ -24,7 +26,13 @@
             <img src="portpholio.png" alt="Consultant" class="consultant-image">
         </div>
     </section>
+    <!-- Hero Section End -->
 
+
+
+
+
+    <!-- Services Section Start -->
 <section class="container">
     <div class="image-section">
         <img src="photo.png" alt="Consultant Image" class="consultant-image">
@@ -37,7 +45,11 @@
         <p>Understanding And Aligning With Your Goals, Our Comprehensive Guidance Ensures Unified Success And Growth.</p>
     </div>
 </section>
+<!-- Services Section End -->
 
+
+
+<!-- Brands Section Start -->
 <section class="brands">
     <h2>Some of our Brands</h2>
     <div class="brand-logos">
@@ -47,8 +59,16 @@
         <img src="1-4.png" alt="Third Brand">
     </div>
 </section>
+ <!-- Brands Section End -->
 
 
+
+
+
+
+
+
+<!-- Expertise Section Start -->
 <div class="expertise-section">
     <!-- Buttons -->
     <div class="card-container">
@@ -122,19 +142,25 @@
         <!-- Statistics -->
         <div class="statistics">
             <div class="stat">
-                <span class="number"><h3>659+</h3></span>
+                <span class="number"><h1>659+</h1></span>
                 <span class="label"><h3>Projects Completed</h3></span>
             </div>
             <div class="stat">
-                <span class="number"><h3>659+</h3></span>
+                <span class="number"><h1>659+</h1></span>
                 <span class="label"><h3>Happy Cleints</h3></span>
             </div>
         </div>
     </div>
 
 </div>
+<!-- Expertise Section End -->
 
 
+
+
+
+
+<!-- Projects Section Start -->
 <section class="projects-section">
     <h1>Take a Look My Recent Projects</h1>
     <p>The a Go, We Normal Ages, Parents Feedback From The Briefs The Distant Applications Harmonics,</p>
@@ -181,8 +207,10 @@
         </div>
     </div>
 </section>
+<!-- Projects Section End -->
 
 
+ <!-- Booking Section Start -->
 <section class="booking-section">
     <h1>Bookings</h1>
     <p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua.</p>
@@ -195,14 +223,14 @@
         <img src="Screenshot 2023-10-25 at 5.48 1.png" alt="">
     </div>
 </section>
+<!-- Booking Section End -->
 
 
 
 
 
 
-
-
+<!-- Footer Start -->
 <footer class="footer">
     <h6>Learning People To Expert Their Vision</h6>
     <div class="social-links">
@@ -213,6 +241,7 @@
 
     </div>
 </footer>
+<!-- Footer End -->
     
 
   
