optimized section 1 for moblie

--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 
      <!-- Hero Section Start -->
     <section class="hero">
-        <div class="left-content">
-            <h1>CONSULTING</h1>
-            <h2>The Consultants</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum.</p>
-            <div class="buttons">
-                <button class="book-call">Book a Call</button>
-                <button class="my-work">My Work</button>
+        <div class="content-container">
+            <div class="left-content">
+                <h1>CONSULTING</h1>
+                <h2>The Consultants</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum.</p>
+
+                <div class="buttons">
+                    <button class="book-call">Book a Call</button>
+                    <button class="my-work">My Work</button>
+                </div>
+            </div>
+
+            <div class="right-content">
+                <img src="portpholio.png" alt="Consultant" class="consultant-image">
             </div>
         </div>
-        <div class="right-content">
-            <img src="portpholio.png" alt="Consultant" class="consultant-image">
-        </div>
+
+        
     </section>
+
+    
     <!-- Hero Section End -->
 
 
@@ -146,7 +154,7 @@
                 <span class="label"><h3>Projects Completed</h3></span>
             </div>
             <div class="stat">
-                <span class="number"><h1>659+</h1></span>
+                <span class="number"><h>659+</h1></span>
                 <span class="label"><h3>Happy Cleints</h3></span>
             </div>
         </div>
