optimize for section 4

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <span class="label"><h3>Projects Completed</h3></span>
             </div>
             <div class="stat">
-                <span class="number"><h>659+</h1></span>
+                <span class="number"><h1>659+</h1></span>
                 <span class="label"><h3>Happy Cleints</h3></span>
             </div>
         </div>
