added new icons in section 4

--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
     <!-- Buttons -->
     <div class="card-container">
 
-        <div class="card">
+        <div class="card h3-header-text-main">
             <div class="icon">
                 <!-- Insert your icon for "Landscaping & Hard Scaping" here -->
-                <img src="ijmnoulkhnilnuiou.png" alt="Landscaping & Hard Scaping Icon">
-            </div>
+                <img src="project-icon.png" alt="Landscaping & Hard Scaping Icon">
+            </div>`
             <div class="text">
-                <h3>Landscaping & Hard Scaping</h3>
+                <h3 class="h3-header-text-main">Landscaping & Hard Scaping</h3>
             </div>
         </div>
     
         <div class="card">
             <div class="icon">
                 <!-- Insert your icon for "Firearms" here -->
-                <img src="ijmnoulkhnilnuiou.png" alt="Firearms Icon">
+                <img src="icon.png" alt="Firearms Icon">
             </div>
             <div class="text">
                 <h3>Firearms</h3>
@@ -104,7 +104,7 @@
         <div class="card">
             <div class="icon">
                 <!-- Insert your icon for "Landscaping & Hard Scaping" here -->
-                <img src="ijmnoulkhnilnuiou.png" alt="Landscaping & Hard Scaping Icon">
+                <img src="ico111.png" alt="Landscaping & Hard Scaping Icon">
             </div>
             <div class="text">
                 <h3>Clothes</h3>
@@ -114,7 +114,7 @@
         <div class="card">
             <div class="icon">
                 <!-- Insert your icon for "Firearms" here -->
-                <img src="ijmnoulkhnilnuiou.png" alt="Firearms Icon">
+                <img src="ico1231212n.png" alt="Firearms Icon">
             </div>
             <div class="text">
                 <h3>Cars</h3>
