--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-content">
                 <h1>CONSULTING</h1>
                 <h2>The Consultants</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac orci phasellus egestas tellus rutrum.</p>
+                <p>Elevate your business with strategic insights and tailored solutions from our expert team. Embrace growth, efficiency, and innovation as we guide you through the ever-evolving business landscape with precision and foresight.</p>
 
                 <div class="buttons">
                     <button class="book-call">Book a Call</button>
