--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Replace the link with the correct one from the official Bootstrap or a reliable CDN -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="The_Correct_Integrity_Value" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ActualIntegrityValue" crossorigin="anonymous">
+
 
 
     <title>Consulting The Consultants</title>
@@ -228,9 +229,11 @@
     <h3><strong>Email</strong></h1>
 
         <form id="contact-form">
-            <div class="field">
-                <label for="to_name">Name:</label>
-                <input type="text" name="to_name" id="to_name" required>
+            <div class="form-group row">
+                <div class="field">
+                    <label for="to_name">Name:</label>
+                    <input type="text" name="to_name" id="to_name" required>
+                </div>
             </div>
             <div class="field">
                 <label for="from_name">Email:</label>
