fixed small spelling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="left-content">
                 <h1>CONSULTING</h1>
                 <h2>The Consultants</h2>
-                <p>Experience bespoke business transformation with my expert consulting services. As your personal strategist, I'm committed to fostering your growth, streamlining efficiency, and pioneering innovation. I bring a wealth of knowledge and foresight to steer your business through its unique journey with clarity and precision.</p>
+                <p>"Experience bespoke business transformation with my expert consulting services. As your personal strategist, I'm committed to fostering your growth, streamlining efficiency, and pioneering innovation. I bring a wealth of knowledge and foresight to steer your business through its unique journey with clarity and precision."</p>
 
                 <div class="buttons">
                     <button class="book-call">Book a Call</button>
@@ -152,7 +152,7 @@
             </div>
             <div class="stat">
                 <span class="number"><h1>850+</h1></span>
-                <span class="label"><h3>Happy Cleints</h3></span>
+                <span class="label"><h3>Happy Clients</h3></span>
             </div>
         </div>
     </div>
