--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="photo.png" alt="Consultant Image" class="consultant-image">
     </div>
     <div class="text-section">
-        <h1>Can Consult Anything</h1>
+        <h1>The Socrates Effect</h1>
         <h2>The Oracle Of Knowledge</h2>
         <p>With my extensive expertise tailored to each project, I am your steadfast ally from inception to execution.</p>
         <p>I dissect the intricate facets of your operations, dedicated to crafting clear, actionable plans.</p>
