--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
         <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-twitter"></i></a>
         <a href="#" target="_blank" class="social-link text-light mx-2"><i class="bi bi-instagram"></i></a>
 
+        
+        <button><a href="https://the-house-of-wolvesmane.myspreadshop.com">Click Here for Merch</a></button>
+            
+
     </div>
 </footer>
 <!-- Footer End -->
